Prepared for release
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@173379 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -199,9 +199,21 @@ Added more components:
 * UPLOAD_ERR (File upload constants)
 * T (Tokenizer constants)
 
-Added loadVersion method
-- Allows automatic loading of all components, or loading all
-components until a given version of PHP is reached.
+Added loadVersion():
+* Allows automatic loading of all components
+* or, loading all components until a given version of PHP is reached.
+]]>
+        </notes>
+    </release>
+
+    <release>
+        <version>1.3.1</version>
+        <date>2004-11-23</date>
+        <license>PHP License</license>
+        <state>stable</state>
+        <notes>
+<![CDATA[
+Fixed problems with loadVersion
 ]]>
         </notes>
         <filelist>
@@ -354,4 +366,5 @@ components until a given version of PHP is reached.
             </dir>
         </filelist>
     </release>
+
 </package>
