Typo in spelling
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@186127 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -317,7 +317,7 @@
                     <file>loadfunction.phpt</file>
                     <file>loadversion.phpt</file>
                     <dir name="constant">
-                        <file>directory_separator.php</file>
+                        <file>directory_separator.phpt</file>
                         <file>e_strict.phpt</file>
                         <file>file.phpt</file>
                         <file>path_separator.phpt</file>
