Make this release an RC
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@202123 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -250,10 +250,10 @@
     </release>
 
     <release>
-        <version>1.5.0</version>
+        <version>1.5.0RC1</version>
         <date>2005-12-06</date>
         <license>PHP License</license>
-        <state>stable</state>
+        <state>beta</state>
         <notes>
          Added more components:
          * is_scalar
